--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -11,7 +11,8 @@
 }
 
 .topSection {
-    gap: 150px;
+    row-gap: 50px;
+    column-gap: 150px;
     display: flex;
     flex-wrap: wrap;
     align-items: start;
@@ -32,6 +33,8 @@
     align-items: start;
     justify-content: start;
     flex-direction: column;
+    margin: 0;
+    padding: 0;
 }
 
 .bottomSection {
