--- a/src/components/Home/Section1/section1.module.css
+++ b/src/components/Home/Section1/section1.module.css
@@ -1,9 +1,36 @@
 .container {
     width: '100%';
-    height: 100vh;
+    gap: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around ;
     background  : var(--background-color);
     position: relative;
     overflow: hidden;
+}
+
+.titleBox {
+    gap: 15px;
+    display: flex;   
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.sliderContainer {
+    width: 60%;   
+}
+
+.sliderImage {
+    width: 760px;
+    height: 500px;
+    max-width: 100%;
+    background-image: url('assets/images/slider1.jpg');
+    background-size: cover;
+    background-position: center;
 }
 
 .topLayer {
@@ -14,4 +41,10 @@
 .bottomLayer {
     bottom: 0;
     position: absolute;
+}
+
+@media screen and (max-width: 1000px) {
+    .sliderContainer {
+        width: 100%;   
+    }
 }
