--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: #040404;
-    border-bottom: 1px solid var(--main-color);
+    border-bottom: 1px solid var(--primary-color);
 }
 
 .menuList {
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     gap: 50px;
+    margin: 0;
 }
 
 @media screen and (max-width: 900px) {
@@ -29,17 +30,18 @@ li {
 }
 
 .link > :hover {
-    color: var(--main-color);
-    fill: var(--main-color);
+    color: var(--primary-color);
+    fill: var(--primary-color);
 }
 
 .link > :hover {
-    color: var(--main-color);
-    fill: var(--main-color);
+    color: var(--primary-color);
+    fill: var(--primary-color);
 }
 
 .mobileNav {
     display: none;
+    margin: 0;
 }
 
 .navWraper {
