--- a/src/components/Buttons/PrimaryButton.module.css
+++ b/src/components/Buttons/PrimaryButton.module.css
@@ -4,14 +4,25 @@
     text-align: center;
     border-radius: 15px;
     font-weight: 700;
-    transition: .2s;
     text-transform: capitalize;
-    color: var(--secondary-color);
-    background-color: transparent;
+    color: var(--dark-color);
+    background-color: var(--primary-color);
     border: 2px solid var(--primary-color);
+    transition: .2s;
+    animation: primaryButtonAnimation 2s
 }
 
 .primaryButton:hover {
-    color: var(--dark-color);
-    background-color: var(--primary-color);
+    background-color: transparent;
+    color: var(--primary-color);
+}
+
+@keyframes primaryButtonAnimation {
+    from {
+        background-color: transparent;
+    }
+
+    to {
+        background-color: var(--primary-color);
+    }
 }
