--- a/src/components/Buttons/secondaryButton.module.css
+++ b/src/components/Buttons/secondaryButton.module.css
@@ -4,25 +4,14 @@
     text-align: center;
     border-radius: 15px;
     font-weight: 700;
-    text-transform: capitalize;
-    color: var(--dark-color);
-    background-color: var(--primary-color);
-    border: 2px solid var(--primary-color);
     transition: .2s;
-    animation: secondaryButtonAnimation 2s
+    text-transform: capitalize;
+    color: var(--secondary-color);
+    background-color: transparent;
+    border: 2px solid var(--primary-color);
 }
 
 .secondaryButton:hover {
-    background-color: transparent;
-    color: var(--primary-color);
-}
-
-@keyframes secondaryButtonAnimation {
-    from {
-        background-color: transparent;
-    }
-
-    to {
-        background-color: var(--primary-color);
-    }
+    color: var(--dark-color);
+    background-color: var(--primary-color);
 }
