--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,6 +1,8 @@
 .container {
+    top: 0;
     width: 100%;
     height: 75px;
+    z-index: 999;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -14,12 +16,6 @@
     justify-content: center;
     gap: 50px;
     margin: 0;
-}
-
-@media screen and (max-width: 900px) {
-    .menuList {
-        display: none;
-    }
 }
 
 li {
@@ -49,6 +45,12 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media screen and (max-width: 900px) {
+    .menuList {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 900px) {
