--- a/src/components/Buttons/SecondaryButton/secondaryButton.module.css
+++ b/src/components/Buttons/SecondaryButton/secondaryButton.module.css
@@ -1,6 +1,7 @@
 .secondaryButton {
-    font-size: 18px;
-    padding: 16px 32px;
+    font-size: 16px;
+    height: 52px;
+    padding: 0 32px;
     text-align: center;
     border-radius: 15px;
     font-weight: 700;
