working on sign up page

--- a/src/pages/register/signUp.module.css
+++ b/src/pages/register/signUp.module.css
@@ -6,15 +6,31 @@
 
 .container {
     --a:0deg;
-    gap: 60px;
 	height: 100vh;
+    display: grid;
+    place-items: center;
+    min-height: calc(100vh - 75px);
+	animation: gradient 15s ease alternate infinite;
+	background: linear-gradient(var(--a), #0C0C0C 0%, #282828 100%);
+}
+
+.formContainer {
+    gap: 90px;
+    padding: 60px 100px;
+    border-radius: 20px;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    min-height: calc(100vh - 75px);
-	animation: gradient 15s ease alternate infinite;
-	background: linear-gradient(var(--a), #0C0C0C 0%, #282828 100%);
+    border: solid 2px var(--primary-color);
+}
+
+.inputsContainer {
+    gap: 30px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .buttonsContainer {
@@ -23,6 +39,24 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+    .formContainer {
+        padding: 50px 80px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .formContainer {
+        padding: 40px 50px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .formContainer {
+        padding: 40px 20px;
+    }
 }
 
 @keyframes gradient {
