--- a/src/components/Inputs/PrimaryInput/primaryInput.module.css
+++ b/src/components/Inputs/PrimaryInput/primaryInput.module.css
@@ -1,8 +1,8 @@
 .container {
     gap: 5px;
     display: flex;
-    align-items: center;
-    justify-content: start;
+    align-items: start;
+    justify-content: center;
     flex-direction: column;
 }
 
