--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,6 +25,16 @@ a {
     padding-right: 120px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+    /* Firefox */
+}
+
 @media screen and (max-width: 1100px) {
     .grid {
         padding-left: 80px;
