push from desktop

--- a/src/components/Home/Section2/section2.module.css
+++ b/src/components/Home/Section2/section2.module.css
@@ -96,3 +96,9 @@
     color: var(--primary-color);
     max-width: 425px;
 }
+
+@media screen and (max-width: 1000px) {
+    .container {
+        justify-content: space-between;
+    }
+}
