--- a/src/components/Home/Landing/landing.module.css
+++ b/src/components/Home/Landing/landing.module.css
@@ -6,7 +6,7 @@
     background-position: center;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     overflow: hidden; 
     position: relative;
 }
@@ -65,6 +65,10 @@
 }
 
 @media screen and (max-width: 1000px) {
+    .container {
+        justify-content: space-between;
+    }
+    
     .box {
         width: 100px;
     }
