--- a/src/components/filterWidget/filterWidget.module.css
+++ b/src/components/filterWidget/filterWidget.module.css
@@ -1,10 +1,23 @@
 .container {
   width: 80%;
-  height: 80px;
+  min-height: 80px;
+  padding: 20px 0;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
   gap: 30px;
-  border-radius: 20px;
-  border: 2px solid var(--primary-color);
+  border-bottom: 2px solid var(--primary-color);
+}
+
+.filtersContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.filterControllers {
+  padding: 10px;
+  cursor: pointer;
 }
