--- a/src/components/filterWidget/filterWidget.module.css
+++ b/src/components/filterWidget/filterWidget.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 80%;
+  width: 100%;
   min-height: 80px;
   padding: 20px 0;
   display: flex;
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 30px;
 }
 
