--- a/src/pages/shop/shop.module.css
+++ b/src/pages/shop/shop.module.css
@@ -1,17 +1,23 @@
 .container {
-  background: var(--background-color);
+  background: var(--light-color);
+  min-height: calc(100vh - 75px);
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: start;
+  justify-content: flex-start;
   flex-direction: column;
   gap: 40px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.shopVideoContainer {
+  display: grid;
+  place-items: center;
+  height: fit-content;
 }
 
 .shopVideo {
-  max-width: 80%;
-  margin-bottom: 100px;
+  width: 80%;
   border-radius: 50px;
   -webkit-filter: brightness(0.5);
   -moz-filter: brightness(0.5);
@@ -19,4 +25,71 @@
   -ms-filter: brightness(0.5);
   filter: brightness(0.4);
   background: black;
+}
+
+.cardsContainer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+}
+
+.card {
+  width: calc((100% / 5) - 40px);
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  flex-direction: column;
+  padding-bottom: 1rem;
+  border-radius: 20px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1000px) {
+  .shopVideo {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .cardsContainer {
+    gap: 30px;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .cardsContainer {
+    gap: 20px;
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .card {
+    width: calc((100% / 4) - 38px);
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .card {
+    width: calc((100% / 3) - 34px);
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .card {
+    width: calc((100% / 2) - 25px);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .card {
+    width: calc((100% / 2) - 15px);
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .card {
+    width: 100%;
+  }
 }
