--- a/src/components/Loading/LogoLoading/logoLoading.module.css
+++ b/src/components/Loading/LogoLoading/logoLoading.module.css
@@ -1,20 +1,25 @@
 .container {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0px;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb( 0, 0, 0 );
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
 }
 
 .loader {
-    animation: spin 3s linear infinite;
+  animation: spin 3s linear infinite;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
