--- a/src/components/Loading/LogoLoading/logoLoading.module.css
+++ b/src/components/Loading/LogoLoading/logoLoading.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  top: 0px;
+  top: 0;
   left: 0;
   z-index: 1000;
   display: flex;
@@ -12,7 +12,14 @@
 }
 
 .loader {
+  width: 100px;
   animation: spin 3s linear infinite;
+}
+
+@media screen and (max-width: 700px) {
+  .loader {
+    width: 60px;
+  }
 }
 
 @keyframes spin {
