--- a/src/pages/shop/shop.module.css
+++ b/src/pages/shop/shop.module.css
@@ -8,6 +8,9 @@
   gap: 40px;
   padding-top: 50px;
   padding-bottom: 50px;
+  width: 100%;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .cardsContainer {
@@ -15,6 +18,8 @@
   display: flex;
   flex-wrap: wrap;
   gap: 50px;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .card {
