--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,64 +1,65 @@
 .container {
-    top: 0;
-    width: 100%;
-    height: 75px;
-    z-index: 999;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #040404;
-    border-bottom: 1px solid var(--primary-color);
+  top: 0;
+  width: 100%;
+  height: 75px;
+  z-index: 999;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #040404;
+  border-bottom: 1px solid var(--primary-color);
 }
 
 .menuList {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-    margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  margin: 0;
 }
 
 li {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .linkContainer {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .link > :hover {
-    color: var(--primary-color);
-    fill: var(--primary-color);
+  color: var(--primary-color);
+  fill: var(--primary-color);
 }
 
 .link > :hover {
-    color: var(--primary-color);
-    fill: var(--primary-color);
+  color: var(--primary-color);
+  fill: var(--primary-color);
 }
 
 .mobileNav {
-    display: none;
-    margin: 0;
+  display: none;
+  margin: 0;
 }
 
 .navWraper {
-    gap: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  gap: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media screen and (max-width: 900px) {
-    .menuList {
-        display: none;
-    }
+  .menuList {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 900px) {
-    .mobileNav {
-        display: block
-    }
+  .mobileNav {
+    display: block;
+  }
 }
