--- a/src/components/Product/MainProduct/mainProduct.module.css
+++ b/src/components/Product/MainProduct/mainProduct.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 50px;
+  overflow: hidden;
 }
 
 .imagesContainer {
@@ -13,6 +14,7 @@
 }
 
 .detailsContainer {
+  max-width: 100%;
   display: flex;
   gap: 30px;
   flex-direction: column;
@@ -32,6 +34,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
+  gap: 20px;
   flex-wrap: wrap;
 }
 
