--- a/src/pages/cart/cart.module.css
+++ b/src/pages/cart/cart.module.css
@@ -1,11 +1,23 @@
 .container {
   padding-top: 50px;
   padding-bottom: 50px;
+  min-height: calc(100vh - 75px);
   gap: 50px;
   display: flex;
   flex-wrap: wrap;
   align-items: start;
+  flex-direction: column;
+  justify-content: flex-start;
+  background: var(--light-background-color);
+}
+
+.contentLayout {
+  width: 100%;
+  gap: 100px;
+  display: flex;
+  align-items: start;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .productsContainer {
@@ -42,6 +54,23 @@
 }
 
 .checkoutContainer {
+  width: 400px;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.checkoutContent {
+  gap: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.breaker {
+  border: 1px solid var(--primary-color);
+  opacity: 1;
 }
 
 .emptyMes {
