--- a/src/pages/wishlist/wishlist.module.css
+++ b/src/pages/wishlist/wishlist.module.css
@@ -1,5 +1,5 @@
 .container {
-  background: var(--light-color);
+  background: var(--light-background-color);
   min-height: calc(100vh - 75px);
   display: flex;
   align-items: start;
