--- a/src/pages/profile/profle.module.css
+++ b/src/pages/profile/profle.module.css
@@ -10,3 +10,11 @@
   justify-content: flex-start;
   background: var(--light-background-color);
 }
+
+.content {
+  gap: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
